[tool.poetry]
name = "imagetools"
version = "0.0.1"
description = "utilities related to image file manipulation at a barely higher level than OCIO or OIIO"
license = "BSD-3-Clause"
authors = [ "Joseph Goldstone <jgoldstone@arri.com>" ]
maintainers = [ "Joseph Goldstone <jgoldstone@arri.com>" ]
# readme = 'README.rst'
keywords = [
    "arri",
    "arriraw", "raw",
    "relative exposure value", "sensor value"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development"
]

[tool.poetry.dependencies]
python = "^3.10"
# imageio = "*"
Fileseq = "^1.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = [ "poetry>=0.12" ]
build-backend = "poetry.masonry.api"
